# demo

第二版/第二版/: .env.example  .gitignore  ARCHITECTURE.md  DELIVERY_CHECKLIST.md  DOCKER_DEPLOYMENT.md  DOCKER_完整部署總結.md  Dockerfile  EA實戰功能_完成總結.md  EA實戰功能_快速啟動.md  FOLLOWER_ENGINE_使用指南.md  FOLLOWER_ENGINE_實作總結.md  GET_STARTED.md  IMPLEMENTATION_SUMMARY.md  MOCK_EXCHANGE_使用指南.md  Navbar快速測試指南.md  Navbar與登出功能_實作總結.md  PROJECT_STATUS.md  PnL統計與通知模組_實作總結.md  PnL與Telegram通知_快速啟動.md  PnL與Telegram通知完整實作總結.md  PnL與通知功能_快速啟動.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RECONCILIATION_QUICK_START.md  SIGNAL_DISPATCHER_實作總結.md  SIGNAL_DISPATCHER_測試指南.md  SQLAlchemy關聯錯誤修復.md  SWAGGER_測試指南.md  TEST_RESULTS.md  Vite修復與客戶管理原型_完成.md  check-backend-error.bat  check-dashboard-in-container.bat  check-env-vars.bat  check-system-status.ps1  create-test-user.ps1  diagnose-frontend-issue.bat  docker-clean.ps1  docker-compose.yml  docker-logs.ps1  (+107 more)
第二版/第二版/alembic/: env.py
第二版/第二版/alembic/versions/: 001_initial_schema.py  002_add_follower_engine_tables.py  003_add_trade_logs_table.py  004_add_slippage_to_trade_history.py  005_add_follow_settings_and_errors.py  006_add_follower_positions.py  007_add_position_snapshots.py  008_add_user_role.py  (+2 more)
第二版/第二版/docker/: entrypoint.sh
第二版/第二版/frontend/: .env.development  .env.production  Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  啟動前端.md
第二版/第二版/scripts/: create_test_relations.py  generate_encryption_key.py  init_db.py  init_test_data.py  run_tests.bat  run_tests.sh
(+78 files in other folders)
